<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>haptic_control</name>
  <version>0.1.0</version>
  <description>
    Teleoperation node that reads pose and velocity from Haption 6DOF haptic device
    and publishes to TF and geometry_msgs/Twist for Franka FR3 control.
  </description>
  <maintainer email="todo@todo.com">IDRA Lab</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>raptor_api_interfaces</depend>
  <depend>std_srvs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>